upgpkg: qt 4.4.2-2     fixing CVE-2008-3632
git-svn-id: file:///srv/repos/svn-packages/svn@12759 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/qt/trunk/PKGBUILD
+++ b/qt/trunk/PKGBUILD
@@ -1,14 +1,15 @@
 # $Id$
+# Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=qt
 pkgver=4.4.2
-pkgrel=1
-_qtcopyver=862569
+pkgrel=2
+_qtcopyver=862767
 pkgdesc="The QT gui toolkit."
 arch=('i686' 'x86_64')
 url="http://www.trolltech.com/products/qt"
 license=('GPL3')
-options=('!libtool')
+options=('!libtool' '!docs')
 depends=('libpng' 'libxi' 'mesa' 'fontconfig' 'libxrandr' 'glib2' 'libtiff' 'libmng' 'sqlite3')
 optdepends=('postgresql-libs' 'libmysqlclient' 'unixodbc')
 makedepends=('postgresql-libs' 'mysql' 'unixodbc')
@@ -20,7 +21,7 @@ _pkgfqn=qt-x11-opensource-src-$pkgver
 source=("ftp://ftp.trolltech.com/qt/source/${_pkgfqn}.tar.gz"
         "ftp://ftp.archlinux.org/other/qt/qt-copy-patches-${_qtcopyver}.tar.bz2")
 md5sums=('d310e4aada6b726c141cb3cfa848edea'
-         '700f3dd6ec31d9c00f36737f62f807a8')
+         'cfeb2c83a0f4b40d64a54f22d7d0d228')
 
 build() {
 	unset QMAKESPEC
