--- a/pango/trunk/PKGBUILD
+++ b/pango/trunk/PKGBUILD
@@ -12,7 +12,7 @@ makedepends=('pkgconfig' 'libxt')
 options=('!libtool' '!emptydirs')
 install=pango.install
 source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/1.22/${pkgname}-${pkgver}.tar.bz2)
-url="http://www.gtk.org/"
+url="http://www.pango.org/"
 md5sums=('37a185a3cb5c1a39ade7fdc3e6c75349')
 
 build() {
