--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,32 +1,31 @@
 # $Id$
-# Maintainer: dorphell <dorphell@archlinux.org>
-# Maintainer: Travis Willard <travis@archlinux.org>
-# Maintainer: Douglas Soares de Andrade <douglas@archlinux.org>
+# Contributor: dorphell <dorphell@archlinux.org>
+# Contributor: Travis Willard <travis@archlinux.org>
+# Contributor: Douglas Soares de Andrade <douglas@archlinux.org>
 
 pkgname=libpng
-pkgver=1.4.0
-pkgrel=2
+pkgver=1.4.1
+pkgrel=1
 pkgdesc="A collection of routines used to create PNG format graphics files"
 arch=('i686' 'x86_64')
 url="http://www.libpng.org/pub/png/libpng.html"
 license=('custom')
 depends=('zlib')
 options=('!libtool')
-source=(http://downloads.sourceforge.net/sourceforge/${pkgname}/${pkgname}-${pkgver}.tar.bz2
-        http://downloads.sourceforge.net/sourceforge/libpng-apng/libpng-${pkgver}-apng.patch.gz
-	libpng14-enable-read-dither.patch)
-md5sums=('fd73b764e92c711c219d766d03889b64' '1a1a1ac18b7c4a23aa9b1441f2c0f2e9'\
+source=("http://downloads.sourceforge.net/sourceforge/${pkgname}/${pkgname}-${pkgver}.tar.xz"
+        "http://downloads.sourceforge.net/sourceforge/libpng-apng/libpng-${pkgver}-apng.patch.gz"
+	'libpng14-enable-read-dither.patch')
+md5sums=('d4cb0236cce9ce8ff49a22994a01f9e0'
+         'cdf7cde368a4e0de8d5400a99a79957f'
          'd4696db4af61b175b705f51aeb9c8d7e')
-sha1sums=('886d651394024b5cab7e9cb5afac41b391f1ccd2' '9c47d62e4ea6e774e008abf4cf8df3461b39fe5d'\
-         'ac26267be933abb0f5fbfe632bac22cc5ed4de49')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
 
   # Add animated PNG (apng) support
-  # see http://hp.vector.co.jp/authors/VA013651/freeSoftware/apng.html
+  # see http://sourceforge.net/projects/libpng-apng/
   patch -p1 -i "${srcdir}/libpng-${pkgver}-apng.patch" || return 1
-
+  # Enabling read dither support - needed for xfig and transfig
   patch -p1 -i "${srcdir}/libpng14-enable-read-dither.patch" || return 1
 
   libtoolize --force --copy || return 1
