--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 pkgbase=pango
 pkgname=(pango pango-docs)
 pkgver=1.48.9
-pkgrel=1
+pkgrel=2
 epoch=1
 pkgdesc="A library for layout and rendering of text"
 url="https://www.pango.org/"
@@ -24,6 +24,9 @@ pkgver() {
 
 prepare() {
   cd pango
+
+  # https://gitlab.gnome.org/GNOME/pango/-/issues/599
+  git cherry-pick -n b823774b132e1cddd6e4a8a423761c5c15375753
 }
 
 build() {
